@@ -15,7 +15,7 @@ setup:
          # Gromacs [ molecule ] identifier from the itp file (typically a 3-letter code)
     watermodel: tip4p
          # water model available in Gromacs (OPLS-AA):
-         # tip4p, tip5p, tip3p, spc, spce     
+         # tip4p, tip5p, tip3p, spc, spce, m24
     itp: None
          # Gromacs itp file name 
     structure: None
