@@ -1,0 +1,39 @@
+; TIP3P-M24 water model from Shirts and Pande. J. Chem. Phys., 122(13), 2005. doi:10.1063/1.1877132
+; TIP3P geometry
+; epsilon: 0.24 kcal/mol
+; sigma: 3.111 Å
+
+[ atomtypes ]
+; name  bond_type    mass    charge   ptype          sigma      epsilon
+ opls_111   OW  8      9.95140    -0.834       A    3.11100e-01  1.00440e-00
+
+[ moleculetype ]
+; molname	nrexcl
+SOL		2
+
+[ atoms ]
+; id	at type	res nr 	residu name	at name		cg nr	charge
+1     opls_111  1       SOL              OW             1       -0.834
+2     opls_112  1       SOL             HW1             1        0.417
+3     opls_112  1       SOL             HW2             1        0.417
+
+#ifndef FLEXIBLE
+[ settles ]
+; i	j	funct	length
+1	1	0.09572	0.15139
+
+[ exclusions ]
+1	2	3
+2	1	3
+3	1	2
+#else
+[ bonds ]
+; i	j	funct	length	force.c.
+1	2	1	0.09572	502416.0 0.09572	502416.0 
+1	3	1	0.09572	502416.0 0.09572	502416.0 
+	
+
+[ angles ]
+; i	j	k	funct	angle	force.c.
+2	1	3	1	104.52	628.02	104.52	628.02	
+#endif
