@@ -1,5 +1,6 @@
-tip4p   TIP4P  TIP 4-point, recommended
-tip3p   TIP3P  TIP 3-point
-tip5p   TIP5P  TIP 5-point
-spc     SPC    simple point charge
-spce    SPC/E  extended simple point charge
+tip4p       TIP4P      TIP 4-point, recommended
+tip3p       TIP3P      TIP 3-point
+tip5p       TIP5P      TIP 5-point
+spc         SPC        simple point charge
+spce        SPC/E      extended simple point charge
+m24         M24        TIP 3-point with modified LJ (M24)
