@@ -7,6 +7,8 @@ GitHub issues numbers and PR numbers.
 
 2016-xx-xx    0.6.1
 
+* supported water models: TIP4P, TIP3P, TIP5P, SPC, SPC/E, and new: M24 (modified TIP3P, #46)
+
 
 2016-06-29    0.6.0
 orbeckst, ianmkenney
